# postgresql-named

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  postgresql-named.cabal  stack.yaml
src/: Lib.hs
src/Database/PostgreSQL/Simple/FromRow/: Named.hs
test/: Spec.hs
